--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.2",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@nrwl/next": "14.4.3",
     "core-js": "^3.6.5",
     "next": "12.1.6",
@@ -55,5 +59,8 @@
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
